2004-08-31  Stefan Jahn  <jahn@mwt.ee.tu-berlin.de>

	* component.cpp (paint): Using font metrics to calculate
	y-spacing for visible component properties.

2004-08-30  Stefan Jahn  <jahn@mwt.ee.tu-berlin.de>

	* componentdialog.cpp (slotSelectProperty): Fixed bug when
	longer descriptions without white spaces occur.

2004-08-24  Stefan Jahn  <stefan@lkcc.org>

	* componentdialog.cpp (correctDesc): New private function which
	is able to detect the special combox-box items in the component
	dialog.

	* isolator.cpp (Isolator), attenuator.cpp (Attenuator),
	msline.cpp (MSline): Added 'Temp' property for noise analysis.

2004-08-16  Stefan Jahn  <stefan@lkcc.org>

	* msopen.cpp (MSopen): Added 'Model' property.

2004-08-03  Stefan Jahn  <stefan@lkcc.org>

	* mosfet_depl.cpp (MOSFET_depl), mosfet.cpp (MOSFET): Added
	model properties.

2004-08-01  Stefan Jahn  <stefan@lkcc.org>

	* diode.cpp (Diode): Added some more new component
	properties.

2004-07-31  Stefan Jahn  <stefan@lkcc.org>

	* diode.cpp (Diode): Added flicker noise parameters to
	component properties.

2004-07-28  Stefan Jahn  <stefan@lkcc.org>

	* bjt.cpp (BJT): Added noise model parameters to the list
	of component properties.

2004-07-26  Stefan Jahn  <stefan@lkcc.org>

	* bjtsub.cpp (BJTsub), bjt.cpp (BJT): Added model parameters.

	* jfet.cpp (JFET): Added noise model parameters.

2004-07-12  Stefan Jahn  <stefan@lkcc.org>

	* sp_sim.cpp (SP_Sim): Inserting line break in component 
	description if necessary and senseful.

2004-07-04  Stefan Jahn  <stefan@lkcc.org>

	* resistor.cpp (Resistor): Added 'Temp' property.

2004-07-01  Stefan Jahn  <stefan@lkcc.org>

	* componentdialog.cpp (ComponentDialog): Allowing ',' to be
	typed into property dialogs (for equations).

2004-06-27  Stefan Jahn  <stefan@lkcc.org>

	* resistor.cpp (Resistor): Fixed typo in 'european'.

	* dc_sim.cpp (DC_Sim): Renamed 'showOPs' property into
	'saveOPs'.

2004-06-09  Stefan Jahn  <stefan@lkcc.org>
